deploy/k8s/rombridge-tailscale-http-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rom-operator-bridge-tailscale-http
  namespace: rom-operator-bridge
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  rules:
    - host: tailrombridge.birb.homes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rom-operator-bridge
                port:
                  number: 7410
